Fix embedded ndla articles by allowing them to have their own scrollbar

--- a/src/style/components/learning-step.css
+++ b/src/style/components/learning-step.css
@@ -65,7 +65,12 @@
   border: none;
 }
 
+.learning-step--without-dimensions {
+  padding: 0px;
+}
+
 .learning-step--without-dimensions iframe {
+  padding-top: 0px;
   width: 1px; /* Needed to enforce content to stay within iframe on Safari iOS */
   min-width: 100%;
   height: 100vh;
